--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,23 @@
-<% provide(:title, "Help") %>
-<h1>Help</h1>
+<% provide(:title, "Pomoc") %>
+<div class="help">
+<h1>Pomoc</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/#help">Rails Tutorial help section</a>.
-  To get help on this sample app, see the
-  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-  book</a>.
+  Najczęściej zadawane pytania
 </p>
+
+<div class="question"> 
+    Czemu tak się nazywa ten portal?
+
+    <p>
+        Ponieważ tak.
+    </p>
+</div>
+
+<div class="question"> 
+   Czemu nikt mnie nie obserwuję?
+   <p>    
+       Jesteś mało interesującą osobą, spróbuj to zmienić. 
+    </p>
+</div>   
+
+</div>   
