--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,12 +1,26 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/* mixins, variables, etc. */
+
+$gray-medium-light: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+
+/* universal */
+
 body {
   padding-top: 60px;
+  background-color: #444444;
 }
 
 section {
-  overflow: auto;
+  overflow: auto;    
 }
 
 textarea {
@@ -14,12 +28,18 @@ textarea {
 }
 
 .center {
+  background-color: lightgrey;
+  border: solid 2px orange;
+  padding: 20px;
   text-align: center;
+  border-radius: 25px;
+  h1 {
+    margin-bottom: 10px;
+    color: blue;  
+  }
 }
 
-.center h1 {
-  margin-bottom: 10px;
-}
+/* typography */
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
@@ -38,7 +58,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $gray-light;
 }
 
 p {
@@ -47,57 +67,51 @@ p {
 }
 
 
+/* header */
+
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
+  color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
 }
 
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
-}
-
+/* footer */
 
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #777;
+  border-top: 1px solid $gray-medium-light;
+  color: $gray-light;
+  a {
+    color: $gray;
+    &:hover {
+      color: #686868;
+      background-color: #D0D0D0 ;    
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
 }
 
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
-}
-
-@mixin box_sizing {
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
-}
+/* miscellaneous */
 
 .debug_dump {
   clear: both;
@@ -107,7 +121,9 @@ footer ul li {
   @include box_sizing;
 }
 
-//sidebar
+
+/* sidebar */
+
 aside {
   section.user_info {
     margin-top: 20px;
@@ -133,6 +149,18 @@ aside {
     }
   }
 }
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+.gravatar_edit {
+  margin-top: 15px;
+}
+
+
+/* sidebar */
 
 .gravatar {
   float: left;
@@ -181,6 +209,7 @@ aside {
   padding: 0;
 }
 
+
 /* forms */
 
 input, textarea, select, .uneditable-input {
@@ -209,7 +238,6 @@ input {
   }
 }
 
-
 .checkbox {
   margin-top: -10px;
   margin-bottom: 10px;
@@ -224,6 +252,7 @@ input {
   margin-left: 0;
 }
 
+
 /* Users index */
 
 .users {
@@ -232,7 +261,7 @@ input {
   li {
     overflow: auto;
     padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
+    border-bottom: 1px solid $gray-darker;
   }
 }
 
@@ -282,4 +311,55 @@ span.picture {
   input {
     border: 0;
   }
+}
+
+//about
+.about{
+    p{
+        background-color: lightgrey;
+        color: blue;
+        border: solid 2px orange;
+        padding: 20px;
+        text-align: center;
+        border-radius: 25px;
+    }
+}
+
+.help{
+   p{
+       text-align: center;
+       font-size: 20px;
+   }
+    
+   .question{
+        background-color: lightgrey;
+        margin: 10px;
+        color: red;
+        border: solid 2px orange;
+        padding: 20px;
+        text-align: left;
+        font-size: 18px;
+        border-radius: 25px;
+       
+        p{
+            color: blue;
+            font-size: 13px;
+            text-align: left;
+            margin: 10px;
+        }
+    }     
+}
+
+
+.contact{
+    .information{
+        background-color: lightgrey;
+        margin: 10px;
+        color: blue;
+        border: solid 2px orange;
+        padding: 20px;
+        text-align: left;
+        font-size: 18px;
+        border-radius: 25px;    
+    }
 }
