--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,7 @@
-<% provide(:title, "About") %>
-<h1>About</h1>
+<% provide(:title, "O nas") %>
+<div class="about">
+<h1>O nas</h1>
 <p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+  Dzięki temu portalowi, masz możliwość łatwego komunikowania się z innymi. Na bierząco poznajesz myśli obserwowanych przez Ciebie osób. Najlepszy portal jaki może być.
 </p>
+</div>
