--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -4,10 +4,12 @@
     <section class="user_info">
       <%= gravatar_for @user %>
       <h1><%= @user.name %></h1>
-      <span><%= link_to "view my profile", @user %></span>
-      <span><b>Microposts:</b> <%= @user.microposts.count %></span>
+      <span><%= link_to "wyświetl mój profil", @user %></span>
+      <span><b>Posty:</b> <%= @user.microposts.count %></span>
     </section>
     <section class="stats">
+          
+     
       <%= render 'shared/stats' %>
       <% if @users.any? %>
         <div class="user_avatars">
@@ -27,4 +29,8 @@
       <%= will_paginate %>
     <% end %>
   </div>
+  
+  
+  
+  
 </div>
